// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionField should render 1`] = `
<div>
  <div
    class="flex items-center py-4 true "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-medium text-theme-secondary-text"
      >
        Test
      </div>
      <div
        class="mt-2"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionField should render with border 1`] = `
<div>
  <div
    class="flex items-center py-4 border-t border-dashed border-theme-secondary-300 dark:border-theme-secondary-800 "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-medium text-theme-secondary-text"
      >
        Test
      </div>
      <div
        class="mt-2"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionField should render with extra children 1`] = `
<div>
  <div
    class="flex items-center py-4 true "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-medium text-theme-secondary-text"
      >
        Test
      </div>
      <div
        class="mt-2"
      >
        test
      </div>
    </div>
    <div
      data-testid="TEST_CHILD"
    />
  </div>
</div>
`;

exports[`TransactionField should render without padding 1`] = `
<div>
  <div
    class="flex items-center py-4 true "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-medium text-theme-secondary-text"
      >
        Test
      </div>
      <div
        class="mt-2"
      >
        test
      </div>
    </div>
  </div>
</div>
`;
